--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack",
     "start": "webpack-dev-server"
   },
+  "repository": "https://github.com/CreaturesInUnitards/mithril-timepicker",
   "keywords": ["timepicker", "mithril", "mithril-component"],
   "author": "Scott Simpson <portrayme@mac.com>",
   "license": "MIT",
